# stistools

./: .gitignore  .readthedocs.yaml  Jenkinsfile  JenkinsfileRT  MANIFEST.in  README.md  conftest.py  defsetup.py  new_setup.cfg  pyproject.toml  readthedocs.yml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  ci.yml  ci_cron.yml  publish-to-pypi.yml
doc/: Makefile  environment.yml  make.bat
doc/source/: barycentric_correction.rst  basic2d.rst  calstis.rst  conf.py  crrej_from_raw.rst  ctestis.rst  defringe.rst  defringe_examples.rst  defringe_guide.rst  doppinfo.rst  evaldisp.rst  gettable.rst  gettingstarted.rst  index.rst  inttag.rst  mktrace.rst  ocrreject.rst  ocrreject_exam.rst  override_crrej.rst  poisson_err.rst  r_util.rst  radialvel.rst  splice.rst  sshift.rst  stisnoise.rst  tastis.rst  wavecal.rst  wavelen.rst  wx2d.rst  x1d.rst  x2d.rst
lib/: __init__.py  __init__.py.sn  evaldisp.py  gettable.py  mktrace.py  r_util.py  radialvel.py  sshift.py  stisnoise.py  tracegen.py  wavelen.py  wx2d.py
lib/stistools/: __init__.py  basic2d.py  calstis.py  doppinfo.py  evaldisp.py  gettable.py  inttag.py  mktrace.py  observation.py  ocrreject.py  odelaytime.py  orbit.py  r_util.py  radialvel.py  sshift.py  stisnoise.py  tastis.py  wavecal.py  wavelen.py  wx2d.py  x1d.py  x2d.py
lib/stistools/pars/: basic2d.cfg  basic2d.cfgspc  calstis.cfg  calstis.cfgspc  ocrreject.cfg  ocrreject.cfgspc  wavecal.cfg  wavecal.cfgspc  x1d.cfg  x1d.cfgspc  x2d.cfg  x2d.cfgspc
lib/stistools/tests/: resources.py  test_calstis.py  test_inttag.py  test_stis.py  test_tastis.py
lib/stistools/tests/data/tastis/: o4er06llq_raw.fits  o4er06llq_spt.fits  oc7w11viq_raw.fits  oc7w11viq_spt.fits  ocmv0lw6q_raw.fits  ocmv0lw6q_spt.fits  ocoa03q2q_raw.fits  ocoa03q2q_spt.fits  octka7jeq_raw.fits  octka7jeq_spt.fits  octr11h4q_raw.fits  octr11h4q_spt.fits  octr11hrq_raw.fits  octr11hrq_spt.fits  ocu252cmq_raw.fits  ocu252cmq_spt.fits  ocui04xeq_raw.fits  ocui04xeq_spt.fits  ocyw05afq_raw.fits  ocyw05afq_spt.fits  od3v01bfq_raw.fits  od3v01bfq_spt.fits
lib/stistools/tests/helpers/: io.py  mark.py
stistools/: .rtd-environment.yml  .travis.yml  MANIFEST.in  README.rst  __init__.py  add_s_region.py  add_stis_s_region.py  barycentric_correction.py  basic2d.py  calstis.py  crrej_exam.py  crrej_from_raw.py  ctestis.py  defringe.py  doppinfo.py  evaldisp.py  fit1d.py  gettable.py  infostis.py  inttag.py  mkfringeflat.py  mktrace.py  observation.py  ocrreject.py  ocrreject_exam.py  ocrrejectexam.py  odelaytime.py  orbit.py  override_crrej.py  poisson_err.py  r_util.py  radialvel.py  response.py  setup.cfg  setup.py  splice.py  sshift.py  stisnoise.py  tastis.py  wavecal.py  (+4 more)
stistools/defringe/: __init__.py  _findloc.py  _fit1d.py  _response.py  defringe.py  mkfringeflat.py  normspflat.py  prepspec.py  response.py
stistools/docs/: conf.py  index.rst
stistools/docs/stistools/: index.rst
stistools/licenses/: LICENSE.rst
stistools/pars/: basic2d.cfg  basic2d.cfgspc  calstis.cfg  calstis.cfgspc  wavecal.cfgspc  x1d.cfg  x1d.cfgspc  x2d.cfgspc
stistools/stistools/example_subpkg/: setup_package.py
test/mktrace-tests/: README  mktrace_basic.par  mktrace_e1.par  plot_results.py  plot_results_e1.py  ref_basic.stdout  ref_e1.stdout  ref_o45a03010_flt_crj_1dt_interp.fits  ref_o45a03010_flt_crj_1dt_interpfit.fits  ref_o45a03010_flt_crj_1dt_sci.fits  ref_o45a03010_flt_crj_1dt_scifit.fits  ref_o8pp31020_crj_1dt_interp.fits  ref_o8pp31020_crj_1dt_interpfit.fits  ref_o8pp31020_crj_1dt_sci.fits  ref_o8pp31020_crj_1dt_scifit.fits  test.xml  test_e1.xml
tests/: Test_x1d.py  conftest.py  resources.py  test_barycentric_correction.py  test_basic2d.py  test_calstis.py  test_crrej_from_raw.py  test_ctestis.py  test_defringe.py  test_doppinfo.py  test_inttag.py  test_mktrace.py  test_ocrreject.py  test_ocrreject_exam.py  test_override_crrej.py  test_poisson_err.py  test_splice.py  test_stisnoise.py  test_tastis.py  test_wx2d.py
tests/helpers/: io.py  mark.py  utils.py
