[metadata]
name = stistools
version = 1.0.2
author = Paul Barrett, Phil Hodge
author-email = help@stsci.edu
home-page = http://www.stsci.edu/resources/software_hardware/stsci_python
summary = Tools for STIS (Space Telescope Imaging Spectrograph)
classifier = 
	Intended Audience :: Science/Research
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Topic :: Scientific/Engineering :: Astronomy
	Topic :: Software Development :: Libraries :: Python Modules
requires-python = >=2.6
requires-dist = 
	stsci.tools
	stsci.convolve
	numpy (>=1.5.1)
	pyfits (>=3.1.1)

[files]
packages_root = lib
packages = stistools
data_files = 
	stistools/pars = lib/stistools/pars/*

[install_data]
pre-hook.glob-data-files = stsci.distutils.hooks.glob_data_files

[global]
setup_hooks = 
	stsci.distutils.hooks.use_packages_root
	stsci.distutils.hooks.tag_svn_revision
	stsci.distutils.hooks.version_setup_hook

